[gd_scene load_steps=7 format=4 uid="uid://1r6i3anhd8q4"]

[ext_resource type="Script" uid="uid://ddavwdqtc66dw" path="res://multiplayers/scripts/game.gd" id="1_vkx6f"]
[ext_resource type="TileSet" uid="uid://l27bsl1ldyw7" path="res://combined_tileset.tres" id="1_yoe2p"]
[ext_resource type="PackedScene" uid="uid://cp6fmq88avygy" path="res://multiplayers/scenes/area_door.tscn" id="3_srsc0"]
[ext_resource type="PackedScene" uid="uid://2hbrwxlvmuw6" path="res://multiplayers/scenes/scoreboard_component.tscn" id="4_srsc0"]
[ext_resource type="FontFile" uid="uid://ccpeu102rjqi4" path="res://assets/fonts/BoldPixels (1).ttf" id="5_hvlu4"]
[ext_resource type="Texture2D" uid="uid://bqqlyj0h138bi" path="res://assets/metroidvania_asset/tiles and background_foreground (new)/background.png" id="5_qfq2a"]

[node name="MultiplayerMap" type="Node" node_paths=PackedStringArray("spawn_path", "list_spawn_points", "host_spawn_point", "client_spawn_point")]
script = ExtResource("1_vkx6f")
spawn_path = NodePath("SpawnPath")
list_spawn_points = [NodePath("TileMap/SP1"), NodePath("TileMap/SP2"), NodePath("TileMap/SP3")]
host_spawn_point = NodePath("TileMap/HostSP")
client_spawn_point = NodePath("TileMap/ClientSP")

[node name="TileMap" type="TileMapLayer" parent="."]
position = Vector2(-26, 4)
tile_map_data = PackedByteArray("AAAiABQAAAACAAMAAAAiABMAAAACAAIAAAAiABIAAAACAAIAAAAiABEAAAACAAIAAAAiABAAAAACAAIAAAAiAA8AAAACAAIAAAAiAA4AAAACAAIAAAAiAA0AAAACAAIAAAAiAAwAAAACAAIAAAAiAAsAAAACAAEAAAAhABQAAAACAAMAAAAhABMAAAACAAIAAAAhABIAAAACAAIAAAAhABEAAAACAAIAAAAhABAAAAACAAIAAAAhAA8AAAACAAIAAAAhAA4AAAACAAIAAAAhAA0AAAACAAIAAAAhAAwAAAACAAIAAAAhAAsAAAACAAEAAAAgABQAAAACAAMAAAAgABMAAAACAAIAAAAgABIAAAACAAIAAAAgABEAAAACAAIAAAAgABAAAAACAAIAAAAgAA8AAAACAAIAAAAgAA4AAAACAAIAAAAgAA0AAAACAAIAAAAgAAwAAAACAAIAAAAgAAsAAAACAAEAAAAfABQAAAACAAMAAAAfABMAAAACAAIAAAAfABIAAAACAAIAAAAfABEAAAACAAIAAAAfABAAAAACAAIAAAAfAA8AAAACAAIAAAAfAA4AAAACAAIAAAAfAA0AAAACAAIAAAAfAAwAAAACAAIAAAAfAAsAAAACAAEAAAAeABQAAAACAAMAAAAeABMAAAACAAIAAAAeABIAAAACAAIAAAAeABEAAAACAAIAAAAeABAAAAACAAIAAAAeAA8AAAACAAIAAAAeAA4AAAACAAIAAAAeAA0AAAACAAIAAAAeAAwAAAACAAIAAAAeAAsAAAACAAEAAAAdABQAAAACAAMAAAAdABMAAAACAAIAAAAdABIAAAACAAIAAAAdABEAAAACAAIAAAAdABAAAAACAAIAAAAdAA8AAAACAAIAAAAdAA4AAAACAAIAAAAdAA0AAAACAAIAAAAdAAwAAAACAAIAAAAdAAsAAAACAAEAAAAcABQAAAACAAMAAAAcABMAAAACAAIAAAAcABIAAAACAAIAAAAcABEAAAACAAIAAAAcABAAAAACAAIAAAAcAA8AAAACAAIAAAAcAA4AAAACAAIAAAAcAA0AAAACAAIAAAAcAAwAAAACAAIAAAAcAAsAAAACAAEAAAAbABQAAAACAAMAAAAbABMAAAACAAIAAAAbABIAAAACAAIAAAAbABEAAAACAAIAAAAbABAAAAACAAIAAAAbAA8AAAACAAIAAAAbAA4AAAACAAIAAAAbAA0AAAACAAIAAAAbAAwAAAACAAIAAAAbAAsAAAACAAEAAAAaABQAAAACAAMAAAAaABMAAAACAAIAAAAaABIAAAACAAIAAAAaABEAAAACAAIAAAAaABAAAAACAAIAAAAaAA8AAAACAAIAAAAaAA4AAAACAAIAAAAaAA0AAAACAAIAAAAaAAwAAAACAAIAAAAaAAsAAAACAAEAAAAZABQAAAACAAMAAAAZABMAAAACAAIAAAAZABIAAAACAAIAAAAZABEAAAACAAIAAAAZABAAAAACAAIAAAAZAA8AAAACAAIAAAAZAA4AAAACAAIAAAAZAA0AAAACAAIAAAAZAAwAAAACAAIAAAAZAAsAAAACAAEAAAAYABQAAAACAAMAAAAYABMAAAACAAIAAAAYABIAAAACAAIAAAAYABEAAAACAAIAAAAYABAAAAACAAIAAAAYAA8AAAACAAIAAAAYAA4AAAACAAIAAAAYAA0AAAACAAIAAAAYAAwAAAACAAIAAAAYAAsAAAACAAEAAAAXABQAAAACAAMAAAAXABMAAAACAAIAAAAXABIAAAACAAIAAAAXABEAAAACAAIAAAAXABAAAAACAAIAAAAXAA8AAAACAAIAAAAXAA4AAAACAAIAAAAXAA0AAAACAAIAAAAXAAwAAAACAAIAAAAXAAsAAAACAAEAAAAWABQAAAACAAMAAAAWABMAAAACAAIAAAAWABIAAAACAAIAAAAWABEAAAACAAIAAAAWABAAAAACAAIAAAAWAA8AAAACAAIAAAAWAA4AAAACAAIAAAAWAA0AAAACAAIAAAAWAAwAAAACAAIAAAAWAAsAAAACAAEAAAAVABQAAAACAAMAAAAVABMAAAACAAIAAAAVABIAAAACAAIAAAAVABEAAAACAAIAAAAVABAAAAACAAIAAAAVAA8AAAACAAIAAAAVAA4AAAACAAIAAAAVAA0AAAACAAIAAAAVAAwAAAACAAIAAAAVAAsAAAACAAEAAAAUABQAAAACAAMAAAAUABMAAAACAAIAAAAUABIAAAACAAIAAAAUABEAAAACAAIAAAAUABAAAAACAAIAAAAUAA8AAAACAAIAAAAUAA4AAAACAAIAAAAUAA0AAAACAAIAAAAUAAwAAAACAAIAAAAUAAsAAAACAAEAAAATABQAAAACAAMAAAATABMAAAACAAIAAAATABIAAAACAAIAAAATABEAAAACAAIAAAATABAAAAACAAIAAAATAA8AAAACAAIAAAATAA4AAAACAAIAAAATAA0AAAACAAIAAAATAAwAAAACAAIAAAATAAsAAAACAAEAAAASABQAAAACAAMAAAASABMAAAACAAIAAAASABIAAAACAAIAAAASABEAAAACAAIAAAASABAAAAACAAIAAAASAA8AAAACAAIAAAASAA4AAAACAAIAAAASAA0AAAACAAIAAAASAAwAAAACAAIAAAASAAsAAAACAAEAAAARABQAAAACAAMAAAARABMAAAACAAIAAAARABIAAAACAAIAAAARABEAAAACAAIAAAARABAAAAACAAIAAAARAA8AAAACAAIAAAARAA4AAAACAAIAAAARAA0AAAACAAIAAAARAAwAAAACAAIAAAARAAsAAAACAAEAAAAQABQAAAACAAMAAAAQABMAAAACAAIAAAAQABIAAAACAAIAAAAQABEAAAACAAIAAAAQABAAAAACAAIAAAAQAA8AAAACAAIAAAAQAA4AAAACAAIAAAAQAA0AAAACAAIAAAAQAAwAAAACAAIAAAAQAAsAAAACAAEAAAAPABQAAAACAAMAAAAPABMAAAACAAIAAAAPABIAAAACAAIAAAAPABEAAAACAAIAAAAPABAAAAACAAIAAAAPAA8AAAACAAIAAAAPAA4AAAACAAIAAAAPAA0AAAACAAIAAAAPAAwAAAACAAIAAAAPAAsAAAACAAEAAAAOABQAAAACAAMAAAAOABMAAAACAAIAAAAOABIAAAACAAIAAAAOABEAAAACAAIAAAAOABAAAAACAAIAAAAOAA8AAAACAAIAAAAOAA4AAAACAAIAAAAOAA0AAAACAAIAAAAOAAwAAAACAAIAAAAOAAsAAAACAAEAAAANABQAAAACAAMAAAANABMAAAACAAIAAAANABIAAAACAAIAAAANABEAAAACAAIAAAANABAAAAACAAIAAAANAA8AAAACAAIAAAANAA4AAAACAAIAAAANAA0AAAACAAIAAAANAAwAAAACAAIAAAANAAsAAAACAAEAAAAMABQAAAACAAMAAAAMABMAAAACAAIAAAAMABIAAAACAAIAAAAMABEAAAACAAIAAAAMABAAAAACAAIAAAAMAA8AAAACAAIAAAAMAA4AAAACAAIAAAAMAA0AAAACAAIAAAAMAAwAAAACAAIAAAAMAAsAAAACAAEAAAALABQAAAACAAMAAAALABMAAAACAAIAAAALABIAAAACAAIAAAALABEAAAACAAIAAAALABAAAAACAAIAAAALAA8AAAACAAIAAAALAA4AAAACAAIAAAALAA0AAAACAAIAAAALAAwAAAACAAIAAAALAAsAAAACAAEAAAAKABQAAAACAAMAAAAKABMAAAACAAIAAAAKABIAAAACAAIAAAAKABEAAAACAAIAAAAKABAAAAACAAIAAAAKAA8AAAACAAIAAAAKAA4AAAACAAIAAAAKAA0AAAACAAIAAAAKAAwAAAACAAIAAAAKAAsAAAACAAEAAAAJABQAAAACAAMAAAAJABMAAAACAAIAAAAJABIAAAACAAIAAAAJABEAAAACAAIAAAAJABAAAAACAAIAAAAJAA8AAAACAAIAAAAJAA4AAAACAAIAAAAJAA0AAAACAAIAAAAJAAwAAAACAAIAAAAJAAsAAAACAAEAAAAIABQAAAACAAMAAAAIABMAAAACAAIAAAAIABIAAAACAAIAAAAIABEAAAACAAIAAAAIABAAAAACAAIAAAAIAA8AAAACAAIAAAAIAA4AAAACAAIAAAAIAA0AAAACAAIAAAAIAAwAAAACAAIAAAAIAAsAAAACAAEAAAADABQAAAACAAMAAAADABMAAAACAAIAAAADABIAAAACAAIAAAADABEAAAACAAIAAAADABAAAAACAAIAAAADAA8AAAACAAIAAAADAA4AAAACAAIAAAADAA0AAAACAAIAAAADAAwAAAACAAIAAAADAAsAAAACAAEAAAACABQAAAACAAMAAAACABMAAAACAAIAAAACABIAAAACAAIAAAACABEAAAACAAIAAAACABAAAAACAAIAAAACAA8AAAACAAIAAAACAA4AAAACAAIAAAACAA0AAAACAAIAAAACAAwAAAACAAIAAAACAAsAAAACAAEAAAABABQAAAACAAMAAAABABMAAAACAAIAAAABABIAAAACAAIAAAABABEAAAACAAIAAAABABAAAAACAAIAAAABAA8AAAACAAIAAAABAA4AAAACAAIAAAABAA0AAAACAAIAAAABAAwAAAACAAIAAAABAAsAAAACAAEAAAAAABQAAAACAAMAAAAAABMAAAACAAIAAAAAABIAAAACAAIAAAAAABEAAAACAAIAAAAAABAAAAACAAIAAAAAAA8AAAACAAIAAAAAAA4AAAACAAIAAAAAAA0AAAACAAIAAAAAAAwAAAACAAIAAAAAAAsAAAACAAEAAAD//xQAAAACAAMAAAD//xMAAAACAAIAAAD//xIAAAACAAIAAAD//xEAAAACAAIAAAD//xAAAAACAAIAAAD//w8AAAACAAIAAAD//w4AAAACAAIAAAD//w0AAAACAAIAAAD//wwAAAACAAIAAAD//wsAAAACAAEAAAD+/xQAAAACAAMAAAD+/xMAAAACAAIAAAD+/xIAAAACAAIAAAD+/xEAAAACAAIAAAD+/xAAAAACAAIAAAD+/w8AAAACAAIAAAD+/w4AAAACAAIAAAD+/w0AAAACAAIAAAD+/wwAAAACAAIAAAD+/wsAAAACAAEAAAD9/xQAAAACAAMAAAD9/xMAAAACAAIAAAD9/xIAAAACAAIAAAD9/xEAAAACAAIAAAD9/xAAAAACAAIAAAD9/w8AAAACAAIAAAD9/w4AAAACAAIAAAD9/w0AAAACAAIAAAD9/wwAAAACAAIAAAD9/wsAAAACAAEAAAD8/xQAAAACAAMAAAD8/xMAAAACAAIAAAD8/xIAAAACAAIAAAD8/xEAAAACAAIAAAD8/xAAAAACAAIAAAD8/w8AAAACAAIAAAD8/w4AAAACAAIAAAD8/w0AAAACAAIAAAD8/wwAAAACAAIAAAD8/wsAAAACAAEAAAD7/xQAAAACAAMAAAD7/xMAAAACAAIAAAD7/xIAAAACAAIAAAD7/xEAAAACAAIAAAD7/xAAAAACAAIAAAD7/w8AAAACAAIAAAD7/w4AAAACAAIAAAD7/w0AAAACAAIAAAD7/wwAAAACAAIAAAD7/wsAAAACAAEAAAD6/xQAAAACAAMAAAD6/xMAAAACAAIAAAD6/xIAAAACAAIAAAD6/xEAAAACAAIAAAD6/xAAAAACAAIAAAD6/w8AAAACAAIAAAD6/w4AAAACAAIAAAD6/w0AAAACAAIAAAD6/wwAAAACAAIAAAD6/wsAAAACAAIAAAD5/xQAAAACAAMAAAD5/xMAAAACAAIAAAD5/xIAAAACAAIAAAD5/xEAAAACAAIAAAD5/xAAAAACAAIAAAD5/w8AAAACAAIAAAD5/w4AAAACAAIAAAD5/w0AAAACAAIAAAD5/wwAAAACAAIAAAD5/wsAAAACAAIAAAD4/xQAAAABAAMAAAD4/xMAAAABAAIAAAD4/xIAAAABAAIAAAD4/xEAAAABAAIAAAD4/xAAAAABAAIAAAD4/w8AAAABAAIAAAD4/w4AAAABAAIAAAD4/w0AAAABAAIAAAD4/wwAAAABAAIAAAD4/wsAAAABAAIAAAADAAYAAAADAAUAAAACAAYAAAACAAUAAAABAAYAAAACAAUAAAAAAAYAAAACAAUAAAD//wYAAAABAAUAAAANAAcAAAADAAUAAAAMAAcAAAACAAUAAAALAAcAAAACAAUAAAAKAAcAAAABAAUAAAAUAAMAAAADAAUAAAATAAMAAAACAAUAAAASAAMAAAACAAUAAAARAAMAAAABAAUAAAAIAAMAAAADAAUAAAAHAAMAAAACAAUAAAAGAAMAAAABAAUAAAAfAAIAAAADAAUAAAAeAAIAAAACAAUAAAAdAAIAAAACAAUAAAAcAAIAAAABAAUAAAAHABIAAAACAAIAAAAHABEAAAACAAIAAAAHABAAAAACAAIAAAAHAA8AAAACAAIAAAAHAA4AAAACAAIAAAAHAA0AAAACAAIAAAAHAAwAAAACAAIAAAAHAAsAAAACAAEAAAAGABIAAAACAAIAAAAGABEAAAACAAIAAAAGABAAAAACAAIAAAAGAA8AAAACAAIAAAAGAA4AAAACAAIAAAAGAA0AAAACAAIAAAAGAAwAAAACAAIAAAAGAAsAAAACAAEAAAAFABIAAAACAAIAAAAFABEAAAACAAIAAAAFABAAAAACAAIAAAAFAA8AAAACAAIAAAAFAA4AAAACAAIAAAAFAA0AAAACAAIAAAAFAAwAAAACAAIAAAAFAAsAAAACAAEAAAAEABIAAAACAAIAAAAEABEAAAACAAIAAAAEABAAAAACAAIAAAAEAA8AAAACAAIAAAAEAA4AAAACAAIAAAAEAA0AAAACAAIAAAAEAAwAAAACAAIAAAAEAAsAAAACAAEAAAAHABQAAAACAAMAAAAHABMAAAACAAIAAAAGABQAAAACAAMAAAAGABMAAAACAAIAAAAFABQAAAACAAMAAAAFABMAAAACAAIAAAAEABQAAAACAAMAAAAEABMAAAACAAIAAAD4//b/AAABAAEAAAD4//f/AAABAAIAAAD4//j/AAABAAIAAAD4//n/AAABAAIAAAD4//r/AAABAAIAAAD4//v/AAABAAIAAAD4//z/AAABAAIAAAD4//3/AAABAAIAAAD4//7/AAABAAIAAAD4////AAABAAIAAAD4/wAAAAABAAIAAAD4/wEAAAABAAIAAAD4/wIAAAABAAIAAAD4/wMAAAABAAIAAAD4/wQAAAABAAIAAAD4/wUAAAABAAIAAAD4/wYAAAABAAIAAAD4/wcAAAABAAIAAAD4/wgAAAABAAIAAAD4/wkAAAABAAIAAAD4/woAAAABAAIAAAD5//b/AAACAAEAAAD5//f/AAACAAIAAAD5//j/AAACAAIAAAD5//n/AAACAAIAAAD5//r/AAACAAIAAAD5//v/AAACAAIAAAD5//z/AAACAAIAAAD5//3/AAACAAIAAAD5//7/AAACAAIAAAD5////AAACAAIAAAD5/wAAAAACAAIAAAD5/wEAAAACAAIAAAD5/wIAAAACAAIAAAD5/wMAAAACAAIAAAD5/wQAAAACAAIAAAD5/wUAAAACAAIAAAD5/wYAAAACAAIAAAD5/wcAAAACAAIAAAD5/wgAAAACAAIAAAD5/wkAAAACAAIAAAD5/woAAAACAAIAAAD6//b/AAACAAEAAAD6//f/AAACAAIAAAD6//j/AAACAAIAAAD6//n/AAACAAIAAAD6//r/AAACAAIAAAD6//v/AAACAAIAAAD6//z/AAACAAIAAAD6//3/AAACAAIAAAD6//7/AAACAAIAAAD6////AAACAAIAAAD6/wAAAAACAAIAAAD6/wEAAAACAAIAAAD6/wIAAAACAAIAAAD6/wMAAAACAAIAAAD6/wQAAAACAAIAAAD6/wUAAAACAAIAAAD6/wYAAAACAAIAAAD6/wcAAAADAAIAAAD6/wgAAAADAAIAAAD6/wkAAAADAAIAAAD6/woAAAADAAIAAAD7//b/AAACAAEAAAD7//f/AAACAAIAAAD7//j/AAACAAIAAAD7//n/AAACAAIAAAD7//r/AAACAAIAAAD7//v/AAACAAIAAAD7//z/AAACAAIAAAD7//3/AAACAAIAAAD7//7/AAACAAIAAAD7////AAACAAIAAAD7/wAAAAACAAIAAAD7/wEAAAACAAIAAAD7/wIAAAACAAIAAAD7/wMAAAACAAIAAAD7/wQAAAACAAIAAAD7/wUAAAACAAIAAAD7/wYAAAACAAMAAAD8//b/AAACAAEAAAD8//f/AAACAAIAAAD8//j/AAACAAIAAAD8//n/AAACAAIAAAD8//r/AAACAAIAAAD8//v/AAACAAIAAAD8//z/AAACAAIAAAD8//3/AAACAAIAAAD8//7/AAACAAIAAAD8////AAACAAIAAAD8/wAAAAACAAIAAAD8/wEAAAACAAIAAAD8/wIAAAACAAIAAAD8/wMAAAACAAIAAAD8/wQAAAACAAIAAAD8/wUAAAACAAIAAAD8/wYAAAACAAMAAAD9//b/AAACAAEAAAD9//f/AAACAAIAAAD9//j/AAACAAIAAAD9//n/AAACAAIAAAD9//r/AAACAAIAAAD9//v/AAACAAIAAAD9//z/AAACAAIAAAD9//3/AAACAAIAAAD9//7/AAACAAIAAAD9////AAACAAIAAAD9/wAAAAACAAIAAAD9/wEAAAACAAIAAAD9/wIAAAACAAIAAAD9/wMAAAACAAIAAAD9/wQAAAACAAIAAAD9/wUAAAACAAIAAAD9/wYAAAACAAMAAAD+//b/AAADAAEAAAD+//f/AAADAAIAAAD+//j/AAADAAIAAAD+//n/AAADAAIAAAD+//r/AAADAAIAAAD+//v/AAADAAIAAAD+//z/AAADAAIAAAD+//3/AAADAAIAAAD+//7/AAADAAIAAAD+////AAADAAIAAAD+/wAAAAADAAIAAAD+/wEAAAADAAIAAAD+/wIAAAADAAIAAAD+/wMAAAADAAIAAAD+/wQAAAADAAIAAAD+/wUAAAADAAIAAAD+/wYAAAADAAMAAAAjAPb/AAACAAEAAAAjAPf/AAACAAIAAAAjAPj/AAACAAIAAAAjAPn/AAACAAIAAAAjAPr/AAACAAIAAAAjAPv/AAACAAIAAAAjAPz/AAACAAIAAAAjAP3/AAACAAIAAAAjAP7/AAACAAIAAAAjAP//AAACAAIAAAAjAAAAAAACAAIAAAAjAAEAAAACAAIAAAAjAAIAAAACAAIAAAAjAAMAAAACAAIAAAAjAAQAAAACAAIAAAAjAAUAAAACAAIAAAAjAAYAAAACAAMAAAAjAAsAAAACAAEAAAAjAAwAAAACAAIAAAAjAA0AAAACAAIAAAAjAA4AAAACAAIAAAAjAA8AAAACAAIAAAAjABAAAAACAAIAAAAjABEAAAACAAIAAAAjABIAAAACAAIAAAAjABMAAAACAAIAAAAjABQAAAACAAMAAAAkAPb/AAACAAEAAAAkAPf/AAACAAIAAAAkAPj/AAACAAIAAAAkAPn/AAACAAIAAAAkAPr/AAACAAIAAAAkAPv/AAACAAIAAAAkAPz/AAACAAIAAAAkAP3/AAACAAIAAAAkAP7/AAACAAIAAAAkAP//AAACAAIAAAAkAAAAAAACAAIAAAAkAAEAAAACAAIAAAAkAAIAAAACAAIAAAAkAAMAAAACAAIAAAAkAAQAAAACAAIAAAAkAAUAAAACAAIAAAAkAAYAAAACAAIAAAAkAAsAAAACAAIAAAAkAAwAAAACAAIAAAAkAA0AAAACAAIAAAAkAA4AAAACAAIAAAAkAA8AAAACAAIAAAAkABAAAAACAAIAAAAkABEAAAACAAIAAAAkABIAAAACAAIAAAAkABMAAAACAAIAAAAkABQAAAACAAMAAAAlAPb/AAACAAEAAAAlAPf/AAACAAIAAAAlAPj/AAACAAIAAAAlAPn/AAACAAIAAAAlAPr/AAACAAIAAAAlAPv/AAACAAIAAAAlAPz/AAACAAIAAAAlAP3/AAACAAIAAAAlAP7/AAACAAIAAAAlAP//AAACAAIAAAAlAAAAAAACAAIAAAAlAAEAAAACAAIAAAAlAAIAAAACAAIAAAAlAAMAAAACAAIAAAAlAAQAAAACAAIAAAAlAAUAAAACAAIAAAAlAAYAAAACAAIAAAAlAAsAAAACAAIAAAAlAAwAAAACAAIAAAAlAA0AAAACAAIAAAAlAA4AAAACAAIAAAAlAA8AAAACAAIAAAAlABAAAAACAAIAAAAlABEAAAACAAIAAAAlABIAAAACAAIAAAAlABMAAAACAAIAAAAlABQAAAACAAMAAAAmAPb/AAADAAEAAAAmAPf/AAADAAIAAAAmAPj/AAADAAIAAAAmAPn/AAADAAIAAAAmAPr/AAADAAIAAAAmAPv/AAADAAIAAAAmAPz/AAADAAIAAAAmAP3/AAADAAIAAAAmAP7/AAADAAIAAAAmAP//AAADAAIAAAAmAAAAAAADAAIAAAAmAAEAAAADAAIAAAAmAAIAAAADAAIAAAAmAAMAAAADAAIAAAAmAAQAAAADAAIAAAAmAAUAAAADAAIAAAAmAAYAAAADAAIAAAAmAAsAAAADAAIAAAAmAAwAAAADAAIAAAAmAA0AAAADAAIAAAAmAA4AAAADAAIAAAAmAA8AAAADAAIAAAAmABAAAAADAAIAAAAmABEAAAADAAIAAAAmABIAAAADAAIAAAAmABMAAAADAAIAAAAmABQAAAADAAMAAAAgAPb/AAABAAEAAAAgAPf/AAABAAIAAAAgAPj/AAABAAIAAAAgAPn/AAABAAIAAAAgAPr/AAABAAIAAAAgAPv/AAABAAIAAAAgAPz/AAABAAIAAAAgAP3/AAABAAIAAAAgAP7/AAABAAIAAAAgAP//AAABAAIAAAAgAAAAAAABAAIAAAAgAAEAAAABAAIAAAAgAAIAAAABAAIAAAAgAAMAAAABAAIAAAAgAAQAAAABAAIAAAAgAAUAAAABAAIAAAAgAAYAAAABAAMAAAAhAPb/AAACAAEAAAAhAPf/AAACAAIAAAAhAPj/AAACAAIAAAAhAPn/AAACAAIAAAAhAPr/AAACAAIAAAAhAPv/AAACAAIAAAAhAPz/AAACAAIAAAAhAP3/AAACAAIAAAAhAP7/AAACAAIAAAAhAP//AAACAAIAAAAhAAAAAAACAAIAAAAhAAEAAAACAAIAAAAhAAIAAAACAAIAAAAhAAMAAAACAAIAAAAhAAQAAAACAAIAAAAhAAUAAAACAAIAAAAhAAYAAAACAAMAAAAiAPb/AAACAAEAAAAiAPf/AAACAAIAAAAiAPj/AAACAAIAAAAiAPn/AAACAAIAAAAiAPr/AAACAAIAAAAiAPv/AAACAAIAAAAiAPz/AAACAAIAAAAiAP3/AAACAAIAAAAiAP7/AAACAAIAAAAiAP//AAACAAIAAAAiAAAAAAACAAIAAAAiAAEAAAACAAIAAAAiAAIAAAACAAIAAAAiAAMAAAACAAIAAAAiAAQAAAACAAIAAAAiAAUAAAACAAIAAAAiAAYAAAACAAMAAAAkAAcAAAABAAIAAAAkAAgAAAABAAIAAAAkAAkAAAABAAIAAAAkAAoAAAABAAIAAAAlAAcAAAACAAIAAAAlAAgAAAACAAIAAAAlAAkAAAACAAIAAAAlAAoAAAACAAIAAAAmAAcAAAADAAIAAAAmAAgAAAADAAIAAAAmAAkAAAADAAIAAAAmAAoAAAADAAIAAAAZAAYAAAACAAUAAAAaAAYAAAACAAUAAAAbAAYAAAADAAUAAAAYAAYAAAABAAUAAAASAAcAAAACAAUAAAATAAcAAAACAAUAAAAUAAcAAAADAAUAAAARAAcAAAABAAUAAAA=")
tile_set = ExtResource("1_yoe2p")

[node name="SP1" type="Marker2D" parent="TileMap"]
position = Vector2(25, -14)

[node name="SP2" type="Marker2D" parent="TileMap"]
position = Vector2(484, -64)

[node name="SP3" type="Marker2D" parent="TileMap"]
position = Vector2(198, 16)

[node name="HostSP" type="Marker2D" parent="TileMap"]
position = Vector2(-62, 132)

[node name="ClientSP" type="Marker2D" parent="TileMap"]
position = Vector2(559, 143)

[node name="AreaDoor" parent="TileMap" instance=ExtResource("3_srsc0")]
position = Vector2(-28, 136)

[node name="AreaDoor2" parent="TileMap" instance=ExtResource("3_srsc0")]
position = Vector2(525, 135)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(222, 74)
zoom = Vector2(0.36, 0.36)

[node name="SpawnPath" type="Node2D" parent="."]

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://dq5wy3rr164cx", "uid://dt4somriatx2b", "uid://c24jn5sghq217")
spawn_path = NodePath("../SpawnPath")

[node name="ScoreboardComponent" parent="." node_paths=PackedStringArray("player1_score", "player2_score", "result_panel", "play_again_button", "winner_title") instance=ExtResource("4_srsc0")]
player1_score = NodePath("../CanvasLayer/Player1Score")
player2_score = NodePath("../CanvasLayer/Player2Score")
result_panel = NodePath("../CanvasLayer/ResultPanel")
play_again_button = NodePath("../CanvasLayer/ResultPanel/MarginContainer/VBoxContainer/PlayAgainButton")
winner_title = NodePath("../CanvasLayer/ResultPanel/MarginContainer/VBoxContainer/WinnerTitle")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenuButton" type="Button" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -26.0
offset_top = 4.0
offset_right = 26.0
offset_bottom = 24.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 8
text = "Main Menu"

[node name="Player1Score" type="Label" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 8
text = "Player 1"
horizontal_alignment = 1

[node name="Player2Score" type="Label" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -62.0
offset_bottom = 23.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 8
text = "Player 2"
horizontal_alignment = 1

[node name="ResultPanel" type="Panel" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -50.0
offset_right = 75.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/ResultPanel"]
custom_minimum_size = Vector2(150, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -50.0
offset_right = 75.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ResultPanel/MarginContainer"]
layout_mode = 2

[node name="WinnerTitle" type="Label" parent="CanvasLayer/ResultPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "Player 1 Win"
horizontal_alignment = 1

[node name="PlayAgainButton" type="Button" parent="CanvasLayer/ResultPanel/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Play Again"

[node name="StartTimerLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_hvlu4")
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartTimer" type="Timer" parent="CanvasLayer"]
wait_time = 5.0
one_shot = true
autostart = true

[node name="Background" type="CanvasLayer" parent="."]
layer = -10

[node name="Sprite2D" type="Sprite2D" parent="Background"]
texture = ExtResource("5_qfq2a")
centered = false

[connection signal="pressed" from="CanvasLayer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="CanvasLayer/ResultPanel/MarginContainer/VBoxContainer/PlayAgainButton" to="." method="_on_play_again_button_pressed"]
[connection signal="timeout" from="CanvasLayer/StartTimer" to="." method="_on_start_time_timeout"]
